seer-core/tests/snapshots/format_snapshots__markdown_domain_diff_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 1557
expression: markdown ().format_diff (& fixture_domain_diff())
---
## Domain Comparison: example.com vs example.net

### Registration

| Field | example.com | example.net | Match |
| --- | --- | --- | --- |
| Registrar | Mock Registrar Inc. | Other Registrar | ≠ |
| Organization | — | Example Org | ≠ |
| Created | 2010-03-15 | 2010-03-15 | = |
| Expires | 2099-03-15 | — | ≠ |

### DNS

| Field | example.com | example.net | Match |
| --- | --- | --- | --- |
| Resolves | yes | yes | = |
| A Records | `192.0.2.1` | `192.0.2.2` | ≠ |
| Nameservers | `ns1.example.com`, `ns2.example.com` | `ns2.example.com`, `ns1.example.com` | = |

### SSL

| Field | example.com | example.net | Match |
| --- | --- | --- | --- |
| Issuer | Mock CA | Mock CA | = |
| Valid Until | 2099-01-01 | 2098-01-01 | ≠ |
| Days Remaining | 26000 | — | ≠ |
| Valid | yes | — | ≠ |
