seer-core/tests/snapshots/format_snapshots__markdown_drift_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 1557
expression: markdown ().format_drift (& fixture_drift())
---
## Drift: example.com

| Field | Old | New |
| --- | --- | --- |
| registrar | Old Registrar | New Registrar |
| nameservers | — | ns1.example.com |
