seer-core/tests/snapshots/format_snapshots__markdown_lookup_available_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 780
expression: markdown ().format_lookup (& fixture_lookup_available())
---
## Lookup: example.com

- **Source**: WHOIS (RDAP unavailable)
- **Verdict**: LIKELY REGISTERED
- **Confidence**: medium
- **Method**: whois
- **Details**: WHOIS returned registration data
- **RDAP Error**: RDAP server returned 503

### Additional WHOIS Data

- **Nameservers**: `ns1.example.com`, `ns2.example.com`
- **Status**: `clientTransferProhibited`
- **DNSSEC**: signedDelegation
- **WHOIS Server**: `whois.verisign-grs.com`
