seer-core/tests/snapshots/format_snapshots__markdown_lookup_rdap_fallback_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 780
expression: markdown ().format_lookup (& fixture_lookup_rdap_with_whois_fallback())
---
## Lookup: EXAMPLE.COM

- **Source**: RDAP
- **Registrar**: Mock Registrar Inc.
- **Created**: `2010-03-15`
- **Expires**: `2099-03-15` (expires in [N] days)
- **Status**: `client transfer prohibited`, `server delete prohibited`
- **Nameservers**: `NS1.EXAMPLE.COM`, `NS2.EXAMPLE.COM`

### Additional WHOIS Data

- **Registrant**: Jane Registrant
- **Organization**: Example Holdings LLC
- **Updated**: `2024-02-01`
- **DNSSEC**: signedDelegation
- **WHOIS Server**: `whois.verisign-grs.com`

### Registrant Contact

- **Email**: `owner@example.com`
- **Phone**: +1.5555550100
- **Address**: 1 Main St, Springfield
- **Country**: US

### Admin Contact

- **Name**: Alex Admin
- **Organization**: Example Holdings LLC
- **Email**: `admin@example.com`
- **Phone**: +1.5555550101

### Tech Contact

- **Name**: Terry Tech
- **Email**: `tech@example.com`
